GPD Win2 This tutorial shows how to modify angle of view.

--- a/handheld/gpdwin2/screen_angle.htm
+++ b/handheld/gpdwin2/screen_angle.htm
@@ -70,7 +70,19 @@ GPD Win2掌機的出現，確實填補司徒心中夢寐以求的掌機位子，
 <img src="screen_angle/6.jpg" class="maxSize"><br><br>
 
 完美的角度<br>
-<img src="screen_angle/7.jpg" class="maxSize">
+<img src="screen_angle/7.jpg" class="maxSize"><br><br>
+
+司徒後來找了一個改動比較小的做法，就是在左右兩側固定1mm高度的墊片即可<br>
+<img src="screen_angle/8.jpg" class="maxSize"><br><br>
+
+左側<br>
+<img src="screen_angle/9.jpg" class="maxSize"><br><br>
+
+右側<br>
+<img src="screen_angle/10.jpg" class="maxSize"><br><br>
+
+相當不錯的角度<br>
+<img src="screen_angle/11.jpg" class="maxSize">
 </p>
 
 <p>
