LeetCode 1528. Shuffle String

--- a/program.htm
+++ b/program.htm
@@ -1435,6 +1435,10 @@ LeetCode</h3>
   1512. Number of Good Pairs</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_1528.htm">
+  1528. Shuffle String</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_1672.htm">
   1672. Richest Customer Wealth</a><br>
 
