LeetCode 1773. Count Items Matching a Rule

--- a/program.htm
+++ b/program.htm
@@ -1451,6 +1451,10 @@ LeetCode</h3>
   1720. Decode XORed Array</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_1773.htm">
+  1773. Count Items Matching a Rule</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_1920.htm">
   1920. Build Array from Permutation</a><br>
 
