--- a/program.htm
+++ b/program.htm
@@ -1439,6 +1439,10 @@ LeetCode</h3>
   1528. Shuffle String</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_1588.htm">
+  1588. Sum of All Odd Length Subarrays</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_1656.htm">
   1656. Design an Ordered Stream</a><br>
 
