LeetCode 2037. Minimum Number of Moves to Seat Everyone

--- a/program.htm
+++ b/program.htm
@@ -1471,6 +1471,10 @@ LeetCode</h3>
   2011. Final Value of Variable After Performing Operations</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_2037.htm">
+  2037. Minimum Number of Moves to Seat Everyone</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_2114.htm">
   2114. Maximum Number of Words Found in Sentences</a><br>
 
