LeetCode 2006. Count Number of Pairs With Absolute Difference K

--- a/program.htm
+++ b/program.htm
@@ -1467,6 +1467,10 @@ LeetCode</h3>
   1929. Concatenation of Array</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_2006.htm">
+  2006. Count Number of Pairs With Absolute Difference K</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_2011.htm">
   2011. Final Value of Variable After Performing Operations</a><br>
 
