LeetCode 1662. Check If Two String Arrays are Equivalent

--- a/program.htm
+++ b/program.htm
@@ -1447,6 +1447,10 @@ LeetCode</h3>
   1656. Design an Ordered Stream</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_1662.htm">
+  1662. Check If Two String Arrays are Equivalent</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_1672.htm">
   1672. Richest Customer Wealth</a><br>
 
