LeetCode 1684. Count the Number of Consistent Strings

--- a/program.htm
+++ b/program.htm
@@ -1455,6 +1455,10 @@ LeetCode</h3>
   1672. Richest Customer Wealth</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_1684.htm">
+  1684. Count the Number of Consistent Strings</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_1720.htm">
   1720. Decode XORed Array</a><br>
 
