LeetCode 1816. Truncate Sentence

--- a/program.htm
+++ b/program.htm
@@ -1467,6 +1467,10 @@ LeetCode</h3>
   1773. Count Items Matching a Rule</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_1816.htm">
+  1816. Truncate Sentence</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_1920.htm">
   1920. Build Array from Permutation</a><br>
 
