LeetCode 1913. Maximum Product Difference Between Two Pairs

--- a/program.htm
+++ b/program.htm
@@ -1471,6 +1471,10 @@ LeetCode</h3>
   1816. Truncate Sentence</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_1913.htm">
+  1913. Maximum Product Difference Between Two Pairs</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_1920.htm">
   1920. Build Array from Permutation</a><br>
 
