LeetCode 2176. Count Equal and Divisible Pairs in an Array

--- a/program.htm
+++ b/program.htm
@@ -1502,6 +1502,10 @@ LeetCode</h3>
   <a href="program/leetcode/c_2114.htm">
   2114. Maximum Number of Words Found in Sentences</a><br>
 
+  &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_2176.htm">
+  2176. Count Equal and Divisible Pairs in an Array</a><br>
+
 &oplus;
 <b>C++</b><br>
 
