LeetCode 832. Flipping an Image

--- a/program.htm
+++ b/program.htm
@@ -1411,6 +1411,10 @@ LeetCode</h3>
   804. Unique Morse Code Words</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_832.htm">
+  832. Flipping an Image</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_1313.htm">
   1313. Decompress Run-Length Encoded List</a><br>
 
