LeetCode 1572. Matrix Diagonal Sum

--- a/program.htm
+++ b/program.htm
@@ -1451,6 +1451,10 @@ LeetCode</h3>
   1534. Count Good Triplets</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_1572.htm">
+  1572. Matrix Diagonal Sum</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_1588.htm">
   1588. Sum of All Odd Length Subarrays</a><br>
 
