LeetCode 1266. Minimum Time Visiting All Points

--- a/program.htm
+++ b/program.htm
@@ -1415,6 +1415,10 @@ LeetCode</h3>
   832. Flipping an Image</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_1266.htm">
+  1266. Minimum Time Visiting All Points</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_1313.htm">
   1313. Decompress Run-Length Encoded List</a><br>
 
