LeetCode 1863. Sum of All Subset XOR Totals

--- a/program.htm
+++ b/program.htm
@@ -1495,6 +1495,10 @@ LeetCode</h3>
   1816. Truncate Sentence</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_1863.htm">
+  1863. Sum of All Subset XOR Totals</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_1913.htm">
   1913. Maximum Product Difference Between Two Pairs</a><br>
 
