--- a/program.htm
+++ b/program.htm
@@ -1487,6 +1487,10 @@ LeetCode</h3>
   1720. Decode XORed Array</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_1725.htm">
+  1725. Number Of Rectangles That Can Form The Largest Square</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_1773.htm">
   1773. Count Items Matching a Rule</a><br>
 
