LeetCode 1732. Find the Highest Altitude

--- a/program.htm
+++ b/program.htm
@@ -1491,6 +1491,10 @@ LeetCode</h3>
   1725. Number Of Rectangles That Can Form The Largest Square</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_1732.htm">
+  1732. Find the Highest Altitude</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_1773.htm">
   1773. Count Items Matching a Rule</a><br>
 
