LeetCode 2108. Find First Palindromic String in the Array

--- a/program.htm
+++ b/program.htm
@@ -1531,6 +1531,10 @@ LeetCode</h3>
   2037. Minimum Number of Moves to Seat Everyone</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_2108.htm">
+  2108. Find First Palindromic String in the Array</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_2114.htm">
   2114. Maximum Number of Words Found in Sentences</a><br>
 
