LeetCode 1979. Find Greatest Common Divisor of Array

--- a/program.htm
+++ b/program.htm
@@ -1527,6 +1527,10 @@ LeetCode</h3>
   1929. Concatenation of Array</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_1979.htm">
+  1979. Find Greatest Common Divisor of Array</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_2006.htm">
   2006. Count Number of Pairs With Absolute Difference K</a><br>
 
@@ -1537,6 +1541,10 @@ LeetCode</h3>
   &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_2037.htm">
   2037. Minimum Number of Moves to Seat Everyone</a><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_2089.htm">
+  2089. Find Target Indices After Sorting Array</a><br>
 
   &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_2108.htm">
