LeetCode 1827. Minimum Operations to Make the Array Increasing

--- a/program.htm
+++ b/program.htm
@@ -1507,6 +1507,10 @@ LeetCode</h3>
   1816. Truncate Sentence</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_1827.htm">
+  1827. Minimum Operations to Make the Array Increasing</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_1863.htm">
   1863. Sum of All Subset XOR Totals</a><br>
 
