LeetCode 2341. Maximum Number of Pairs in Array

--- a/program.htm
+++ b/program.htm
@@ -1558,6 +1558,10 @@ LeetCode</h3>
   <a href="program/leetcode/c_2176.htm">
   2176. Count Equal and Divisible Pairs in an Array</a><br>
 
+  &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_2341.htm">
+  2341. Maximum Number of Pairs in Array</a><br>
+
 &oplus;
 <b>C++</b><br>
 
