--- a/program.htm
+++ b/program.htm
@@ -1423,6 +1423,10 @@ LeetCode</h3>
   1266. Minimum Time Visiting All Points</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_1295.htm">
+  1295. Find Numbers with Even Number of Digits</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_1304.htm">
   1304. Find N Unique Integers Sum up to Zero</a><br>
 
