--- a/program.htm
+++ b/program.htm
@@ -1415,6 +1415,10 @@ LeetCode</h3>
   832. Flipping an Image</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_942.htm">
+  942. DI String Match</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_1252.htm">
   1252. Cells with Odd Values in a Matrix</a><br>
 
