LeetCode 961. N-Repeated Element in Size 2N Array

--- a/program.htm
+++ b/program.htm
@@ -1427,6 +1427,10 @@ LeetCode</h3>
   942. DI String Match</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_961.htm">
+  961. N-Repeated Element in Size 2N Array</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_1252.htm">
   1252. Cells with Odd Values in a Matrix</a><br>
 
