--- a/program.htm
+++ b/program.htm
@@ -1527,6 +1527,10 @@ LeetCode</h3>
   1732. Find the Highest Altitude</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_1748.htm">
+  1748. Sum of Unique Elements</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_1773.htm">
   1773. Count Items Matching a Rule</a><br>
 
