LeetCode 1475. Final Prices With a Special Discount in a Shop

--- a/program.htm
+++ b/program.htm
@@ -1475,6 +1475,10 @@ LeetCode</h3>
   1470. Shuffle the Array</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_1475.htm">
+  1475. Final Prices With a Special Discount in a Shop</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_1480.htm">
   1480. Running Sum of 1d Array</a><br>
 
