LeetCode 2206. Divide Array Into Equal Pairs

--- a/program.htm
+++ b/program.htm
@@ -1599,6 +1599,10 @@ LeetCode</h3>
   2185. Counting Words With a Given Prefix</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_2206.htm">
+  2206. Divide Array Into Equal Pairs</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_2341.htm">
   2341. Maximum Number of Pairs in Array</a><br>
 
