LeetCode 1051. Height Checker

--- a/program.htm
+++ b/program.htm
@@ -1431,6 +1431,10 @@ LeetCode</h3>
   961. N-Repeated Element in Size 2N Array</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_1051.htm">
+  1051. Height Checker</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_1252.htm">
   1252. Cells with Odd Values in a Matrix</a><br>
 
