LeetCode 1299. Replace Elements with Greatest Element on Right Side

--- a/program.htm
+++ b/program.htm
@@ -1447,6 +1447,10 @@ LeetCode</h3>
   1295. Find Numbers with Even Number of Digits</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_1299.htm">
+  1299. Replace Elements with Greatest Element on Right Side</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_1304.htm">
   1304. Find N Unique Integers Sum up to Zero</a><br>
 
