LeetCode 1710. Maximum Units on a Truck

--- a/program.htm
+++ b/program.htm
@@ -1531,6 +1531,10 @@ LeetCode</h3>
   1684. Count the Number of Consistent Strings</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_1710.htm">
+  1710. Maximum Units on a Truck</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_1720.htm">
   1720. Decode XORed Array</a><br>
 
