LeetCode 2154. Keep Multiplying Found Values by Two

--- a/program.htm
+++ b/program.htm
@@ -1615,6 +1615,10 @@ LeetCode</h3>
   2114. Maximum Number of Words Found in Sentences</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_2154.htm">
+  2154. Keep Multiplying Found Values by Two</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_2176.htm">
   2176. Count Equal and Divisible Pairs in an Array</a><br>
 
