LeetCode 2255. Count Prefixes of a Given String

--- a/program.htm
+++ b/program.htm
@@ -1631,6 +1631,10 @@ LeetCode</h3>
   2206. Divide Array Into Equal Pairs</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_2255.htm">
+  2255. Count Prefixes of a Given String</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_2341.htm">
   2341. Maximum Number of Pairs in Array</a><br>
 
