LeetCode 2032. Two Out of Three

--- a/program.htm
+++ b/program.htm
@@ -1599,6 +1599,10 @@ LeetCode</h3>
   2011. Final Value of Variable After Performing Operations</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_2032.htm">
+  2032. Two Out of Three</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_2037.htm">
   2037. Minimum Number of Moves to Seat Everyone</a><br>
 
