--- a/program.htm
+++ b/program.htm
@@ -1411,6 +1411,10 @@ LeetCode</h3>
   1. Two Sum</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_26.htm">
+  26. Remove Duplicates from Sorted Array</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_561.htm">
   561. Array Partition</a><br>
 
