LeetCode 27. Remove Element

--- a/program.htm
+++ b/program.htm
@@ -1415,6 +1415,10 @@ LeetCode</h3>
   26. Remove Duplicates from Sorted Array</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_27.htm">
+  27. Remove Element</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_561.htm">
   561. Array Partition</a><br>
 
