LeetCode 66. Plus One

--- a/program.htm
+++ b/program.htm
@@ -1423,6 +1423,10 @@ LeetCode</h3>
   35. Search Insert Position</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_66.htm">
+  66. Plus One</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_561.htm">
   561. Array Partition</a><br>
 
