LeetCode 118. Pascal's Triangle

--- a/program.htm
+++ b/program.htm
@@ -1435,6 +1435,10 @@ LeetCode</h3>
   108. Convert Sorted Array to Binary Search Tree</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_118.htm">
+  118. Pascal's Triangle</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_561.htm">
   561. Array Partition</a><br>
 
