PCP Added teardown images.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6066,6 +6066,10 @@ PCP STATION</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
+<a href="handheld/pcp/teardown.htm">
+拆機</a><br>
+
+&lowast;
 <a href="handheld/pcp/screen.htm">
 可視角</a><br>
 <br><br><br><br>
