PS003 Added angle of view images.

--- a/handheld.htm
+++ b/handheld.htm
@@ -198,6 +198,7 @@
   <a href="#a30"><img src="img/photos/a30.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Powkiddy A30"/></a>
   <a href="#16bit"><img src="img/photos/16bit.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="16BIT GAMING"/></a>
   <a href="#pcp"><img src="img/photos/pcp.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="PCP STATION"/></a>
+  <a href="#ps003"><img src="img/photos/ps003.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="PS003"/></a>
 </p>
 </div>
 
@@ -6071,6 +6072,16 @@ PCP STATION</h3>
 
 &lowast;
 <a href="handheld/pcp/screen.htm">
+可視角</a><br>
+<br><br><br><br>
+
+<div id="ps003"></div>
+<h3><img src="img/photos/ps003.jpg" class="floatLeft"/>
+PS003</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="handheld/ps003/screen.htm">
 可視角</a><br>
 <br><br><br><br>
 
