PS003 Added teardown images.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6081,6 +6081,10 @@ PS003</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
+<a href="handheld/ps003/teardown.htm">
+拆機</a><br>
+
+&lowast;
 <a href="handheld/ps003/screen.htm">
 可視角</a><br>
 <br><br><br><br>
