One Station Added teardown images.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6096,6 +6096,10 @@ One Station</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
+<a href="handheld/onestation/teardown.htm">
+拆機</a><br>
+
+&lowast;
 <a href="handheld/onestation/screen.htm">
 可視角</a><br>
 <br><br><br><br>
