--- a/program/gnu/ld_library_path.htm
+++ b/program/gnu/ld_library_path.htm
@@ -48,18 +48,25 @@
 <p><b>如何編譯ELF並使用指定的LIB路徑執行</b></p>
 <hr size="1">
 <p>
-GCC編譯之前，必須先設定LD_LIBRARY_PATH，編譯後的ELF就會優先使用指定的LIB路徑(編譯後才設定是無效的)，如下：
+編譯時：
 </p>
 <pre>
-$ export LD_LIBRARY_PATH=xxx:$LD_LIBRARY_PATH
-$ gcc xxx
+$ gcc BasicTnL.c -o BasicTnL -Lxxx -lSDL2 -lEGL -lGLESv2
 
 $ ldd BasicTnL
   linux-vdso.so.1 (0x00007ffc9628e000)
   libdl.so.2 => /lib/x86_64-linux-gnu/libdl.so.2 (0x00007f2898ff8000)
   libX11.so.6 => /lib/x86_64-linux-gnu/libX11.so.6 (0x00007f2898eb7000)
-  libEGL.so => /home/steward/Downloads/swiftshader/build/libEGL.so (0x00007f2898ea6000)
-  libGLES_CM.so => /home/steward/Downloads/swiftshader/build/libGLES_CM.so (0x00007f2897f29000)
+  libEGL.so => xxx/libEGL.so (0x00007f2898ea6000)
+  libGLES_CM.so => xxx/libGLES_CM.so (0x00007f2897f29000)
+</pre><br>
+
+<p>
+執行時：
+</p>
+<pre>
+$ export LD_LIBRARY_PATH=xxx:$LD_LIBRARY_PATH
+$ ./BasicTnL
 </pre><br>
 
 <p>
