LeetCode 2. Add Two Numbers

--- a/program.htm
+++ b/program.htm
@@ -1411,6 +1411,10 @@ LeetCode</h3>
   1. Two Sum</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_2.htm">
+  2. Add Two Numbers</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_26.htm">
   26. Remove Duplicates from Sorted Array</a><br>
 
