LeetCode 9. Palindrome Number

--- a/program.htm
+++ b/program.htm
@@ -1415,6 +1415,10 @@ LeetCode</h3>
   2. Add Two Numbers</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_9.htm">
+  9. Palindrome Number</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_26.htm">
   26. Remove Duplicates from Sorted Array</a><br>
 
