LeetCode 20. Valid Parentheses

--- a/program.htm
+++ b/program.htm
@@ -1427,6 +1427,10 @@ LeetCode</h3>
   14. Longest Common Prefix</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_20.htm">
+  20. Valid Parentheses</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_26.htm">
   26. Remove Duplicates from Sorted Array</a><br>
 
