LeetCode 28. Implement strStr()

--- a/program.htm
+++ b/program.htm
@@ -1439,6 +1439,10 @@ LeetCode</h3>
   27. Remove Element</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_28.htm">
+  28. Implement strStr()</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_35.htm">
   35. Search Insert Position</a><br>
 
