LeetCode 268. Missing Number

--- a/program.htm
+++ b/program.htm
@@ -1491,6 +1491,10 @@ LeetCode</h3>
   228. Summary Ranges</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_268.htm">
+  268. Missing Number</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_561.htm">
   561. Array Partition</a><br>
 
