LeetCode 303. Range Sum Query - Immutable

--- a/program.htm
+++ b/program.htm
@@ -1499,6 +1499,10 @@ LeetCode</h3>
   283. Move Zeroes</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_303.htm">
+  303. Range Sum Query - Immutable</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_561.htm">
   561. Array Partition</a><br>
 
