LeetCode 349. Intersection of Two Arrays

--- a/program.htm
+++ b/program.htm
@@ -1503,6 +1503,10 @@ LeetCode</h3>
   303. Range Sum Query - Immutable</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_349.htm">
+  349. Intersection of Two Arrays</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_561.htm">
   561. Array Partition</a><br>
 
