LeetCode 350. Intersection of Two Arrays II

--- a/program.htm
+++ b/program.htm
@@ -1507,6 +1507,10 @@ LeetCode</h3>
   349. Intersection of Two Arrays</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_350.htm">
+  350. Intersection of Two Arrays II</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_561.htm">
   561. Array Partition</a><br>
 
