--- a/handheld.htm
+++ b/handheld.htm
@@ -200,6 +200,7 @@
   <a href="#pcp"><img src="img/photos/pcp.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="PCP STATION"/></a>
   <a href="#ps003"><img src="img/photos/ps003.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="PS003"/></a>
   <a href="#onestation"><img src="img/photos/onestation.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="One Station"/></a>
+  <a href="#mini-gamer"><img src="img/photos/mini-gamer.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Mini Retro Gamer"/></a>
 </p>
 </div>
 
@@ -6101,6 +6102,16 @@ One Station</h3>
 
 &lowast;
 <a href="handheld/onestation/screen.htm">
+可視角</a><br>
+<br><br><br><br>
+
+<div id="mini-gamer"></div>
+<h3><img src="img/photos/mini-gamer.jpg" class="floatLeft"/>
+Mini Retro Gamer</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="handheld/mini-gamer/screen.htm">
 可視角</a><br>
 <br><br><br><br>
 
