Mini Retro Gamer Added teardown images.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6111,6 +6111,10 @@ Mini Retro Gamer</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
+<a href="handheld/mini-gamer/teardown.htm">
+拆機</a><br>
+
+&lowast;
 <a href="handheld/mini-gamer/screen.htm">
 可視角</a><br>
 <br><br><br><br>
