GPD Win2 Loose hinge to prevent plastic holder broken.

--- a/handheld.htm
+++ b/handheld.htm
@@ -1385,6 +1385,10 @@ GPD Win2</h3>
 固定螢幕開闔角度為165度</a><br>
 
 &lowast;
+<a href="handheld/gpdwin2/hinge.htm">
+如何鬆開鉸鏈避免外殼斷裂</a><br>
+
+&lowast;
 <a href="handheld/gpdwin2/d3d_issue.htm">
 如何解決玩DOSBox半屏的問題</a><br>
 
