GGM Audio volume is passed via PA0(Touch Panel).

--- a/handheld/ggm/pin.htm
+++ b/handheld/ggm/pin.htm
@@ -82,7 +82,8 @@
 <tr><td>FLASH MISO</td><td>PC2</td></tr>
 <tr><td>FLASH CS</td><td>PC1</td></tr>
 <tr><td>FLASH SCK</td><td>PC0</td></tr>
-<tr><td>Audio EN(MOD)</td><td>PE4</td></tr>
+<tr><td>Audio EN</td><td>PE4</td></tr>
+<tr><td>Audio Volume</td><td>PA0</td></tr>
 <tr><td>MicroSD D1(MOD)</td><td>PF0</td></tr>
 <tr><td>MicroSD D0(MOD)</td><td>PF1</td></tr>
 <tr><td>MicroSD CLK(MOD)</td><td>PF2</td></tr>
