GGB Updated GB and GBC emulators.

--- a/handheld/ggm/linux.htm
+++ b/handheld/ggm/linux.htm
@@ -246,7 +246,43 @@ rootfs：系統<br>
 mininit：由Kernel呼叫用來掛載rootfs(squashfs系統)<br>
 swap.img：虛擬內存(128MB)<br><br>
 
-音量控制是司徒失算的部份，一般音量轉盤都是直接控制大小聲音，但是GGM掌機並不是這樣設計，所以目前無法控制音量，另一部份則是電池顯示，不完美的部份就留給想要折騰的玩家，司徒接下來會把剩餘的虛擬GPU以及Arduboy模擬器完成
+司徒幫Miyoo Mini(SSD202)上了一顆虛擬GPU(Google SwiftShader)，用來跑PPSSPP模擬器，原本打算再次移植給F1C200S使用，讓它跑OpenGL ES 2.0程式，可惜司徒錯估SwiftShader需要至少ARMv7才可以支援，於是司徒再度修改項目，將原本app_e(OpenGL ES)改成跑GB模擬器，而app_a(Arduboy模擬器)改成跑GBC模擬器，而司徒最後再度挖掘，才發現GGM音量轉輪是接到PA0，透過TouchPanel方式輸入，利用其電壓做音量控制，修改後的Kernel位於：<a href="https://github.com/steward-fu/ggm/releases/download/src/kernel_20220821.tar.gz">Kernel</a>，目前已經可以控制音量大小～<br><br>
+
+<b>app_e(GB模擬器)</b><br>
+編譯後：<a href="https://github.com/steward-fu/ggm/releases/download/v1.0/app_e_20220821.tar.gz">app_e</a><br>
+源代碼：<a href="https://github.com/steward-fu/ggm/releases/download/src/gambatte_20220821.tar.gz">gambatte</a><br>
+玩家只要將<b>編譯後</b>的檔案解壓縮到app_e資料夾就可以，接著執行如下程式<br>
+<img src="linux/28.jpg" class="maxSize"><br><br>
+
+司徒將GBA的選單拿來重複使用，因此，字型大小算是相當剛好(遊戲請放在<b>roms/gb</b>資料夾)<br>
+<img src="linux/29.jpg" class="maxSize"><br><br>
+
+司徒保留GB的BIOS開機畫面，每次看到這個畫面總是相當懷念～<br>
+<img src="linux/30.jpg" class="maxSize"><br><br>
+
+司徒打包了很多調色盤以供使用，因此，有相當多調色盤使用好好試試～<br>
+<img src="linux/31.jpg" class="maxSize"><br><br>
+
+別有一番風味～<br>
+<img src="linux/32.jpg" class="maxSize"><br><br>
+
+<b>app_a(GBC模擬器)</b><br>
+編譯後：<a href="https://github.com/steward-fu/ggm/releases/download/v1.0/app_a_20220821.tar.gz">app_a</a><br>
+源代碼：<a href="https://github.com/steward-fu/ggm/releases/download/src/gambatte_20220821.tar.gz">gambatte</a><br>
+玩家只要將<b>編譯後</b>的檔案解壓縮到app_a資料夾就可以，接著執行如下程式<br>
+<img src="linux/33.jpg" class="maxSize"><br><br>
+
+字型大小算是相當剛好(遊戲請放在<b>roms/gbc</b>資料夾)<br>
+<img src="linux/34.jpg" class="maxSize"><br><br>
+
+保留GBC的BIOS開機畫面，是不是相當懷念～哈～<br>
+<img src="linux/35.jpg" class="maxSize"><br><br>
+
+如果玩家有注意到，司徒將GB的外框往上移動，GBC則是往下移動，這樣看起來是不是更有感覺呢～哈～<br>
+<img src="linux/36.jpg" class="maxSize"><br><br>
+
+菜單都是使用藍色按鍵做設定～<br>
+<img src="linux/37.jpg" class="maxSize">
 </p>
 
 <p>
