Odroid Go Updated teardown images.

--- a/handheld/odroid-go/teardown.htm
+++ b/handheld/odroid-go/teardown.htm
@@ -51,41 +51,62 @@
 正面<br>
 <img src="teardown/1.jpg" class="maxSize"><br><br>
 
-背面<br>
+底部<br>
 <img src="teardown/2.jpg" class="maxSize"><br><br>
 
-拆機<br>
+側邊<br>
 <img src="teardown/3.jpg" class="maxSize"><br><br>
 
-ESP32-WROVER-B<br>
+上部<br>
 <img src="teardown/4.jpg" class="maxSize"><br><br>
 
-USB to UART(CP2104)<br>
+側邊<br>
 <img src="teardown/5.jpg" class="maxSize"><br><br>
 
-DC-DC(MP2161GJ-C499)<br>
+背面<br>
 <img src="teardown/6.jpg" class="maxSize"><br><br>
 
-Battery Charger(XC6802A42XMR)、PAM8304A<br>
+B面<br>
 <img src="teardown/7.jpg" class="maxSize"><br><br>
 
-PCB正面<br>
+PCB<br>
 <img src="teardown/8.jpg" class="maxSize"><br><br>
 
-Speaker<br>
+背面<br>
 <img src="teardown/9.jpg" class="maxSize"><br><br>
 
-3.7V 1200mA<br>
+正面<br>
 <img src="teardown/10.jpg" class="maxSize"><br><br>
 
-A面<br>
+CP2102N<br>
 <img src="teardown/11.jpg" class="maxSize"><br><br>
 
-LCD 12Pin<br>
+ESP32-WROVER 240MHz<br>
 <img src="teardown/12.jpg" class="maxSize"><br><br>
 
-LCD FPC<br>
-<img src="teardown/13.jpg" class="maxSize">
+XC6802A42XMR、PAM8304A<br>
+<img src="teardown/13.jpg" class="maxSize"><br><br>
+
+MP2161GJ-C499<br>
+<img src="teardown/14.jpg" class="maxSize"><br><br>
+
+導電膠、按鍵<br>
+<img src="teardown/15.jpg" class="maxSize"><br><br>
+
+KPL753343 3.7v 1200mA<br>
+<img src="teardown/16.jpg" class="maxSize"><br><br>
+
+喇叭<br>
+<img src="teardown/17.jpg" class="maxSize"><br><br>
+
+A面<br>
+<img src="teardown/18.jpg" class="maxSize"><br><br>
+
+MYT FPC24T496-A2<br>
+<img src="teardown/19.jpg" class="maxSize"><br><br>
+
+12 Pin<br>
+<img src="teardown/20.jpg" class="maxSize">
 </p>
 
 <p>
