--- a/handheld.htm
+++ b/handheld.htm
@@ -3413,6 +3413,10 @@ Odroid Go</h3>
 可視角</a><br>
 
 &lowast;
+<a href="handheld/odroid-go/block.htm">
+方塊圖</a><br>
+
+&lowast;
 <a href="handheld/odroid-go/header.htm">
 Header</a><br>
 <br><br><br><br>
