Odroid Go Added ESP32 pinout image.

--- a/handheld.htm
+++ b/handheld.htm
@@ -3419,6 +3419,10 @@ Odroid Go</h3>
 &lowast;
 <a href="handheld/odroid-go/header.htm">
 Header</a><br>
+
+&lowast;
+<a href="handheld/odroid-go/pin.htm">
+ESP32腳位</a><br>
 <br><br><br><br>
 
 <div id="atari-portable"></div>
