FeatherWing Updated as v2.

--- a/umpc.htm
+++ b/umpc.htm
@@ -1048,6 +1048,10 @@ Keyboard FeatherWing</h3>
 介紹</a><br>
 
 &lowast;
+<a href="umpc/featherwing/comp.htm">
+元件圖</a><br>
+
+&lowast;
 <a href="umpc/featherwing/block.htm">
 方塊圖</a><br>
 
