--- a/umpc/featherwing/comp.htm
+++ b/umpc/featherwing/comp.htm
@@ -45,18 +45,17 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Keyboard FeatherWing</h3>
-<p><b>介紹</b></p>
+<p><b>元件圖</b></p>
 <hr size="1">
 <p>
-簡要規格
+參考資訊：<br>
+1. <a href="https://www.solder.party/docs/keyboard-featherwing/rev2/block-diagram/">block-diagram</a><br>
+2. <a href="https://github.com/arturo182/bbq10kbd_i2c_sw">bbq10kbd_i2c_sw</a><br>
+3. <a href="https://github.com/arturo182/keyboard_featherwing_hw">keyboard_featherwing_hw</a><br><br>
+
+如下：<br>
+<img src="comp/1.jpg" class="maxSize">
 </p>
-<table>
-  <tr><th>Screen</th><td>2.6" 320x240 Resistive Touch</td></tr>
-  <tr><th>Slot</th><td>MicroSD</td></tr>
-  <tr><th>Keypad</th><td>5-Way and 4 Buttons</td></tr>
-  <tr><th>Keyboard</th><td>4 Rows QWERTY</td></tr>
-  <tr><th>Dimension</th><td>68mm x 100mm</td></tr>
-</table><br>
 
 <p>
 <br><a href="../../umpc.htm">返回上一頁</a>
