--- a/umpc/featherwing/sch.htm
+++ b/umpc/featherwing/sch.htm
@@ -55,7 +55,10 @@
 如下：<br>
 <img src="sch/1.jpg" class="maxSize"><br>
 <img src="sch/2.jpg" class="maxSize"><br>
-<img src="sch/3.jpg" class="maxSize">
+<img src="sch/3.jpg" class="maxSize"><br><br>
+
+PCB<br>
+<img src="sch/4.jpg" class="maxSize">
 </p>
 
 <p>
