FC3000 Added LCD schematic.

--- a/handheld/fc3000/lcd_init.htm
+++ b/handheld/fc3000/lcd_init.htm
@@ -1275,7 +1275,10 @@ lcd_cmd:
 
 <p>
 感動的一刻<br>
-<img src="asm_lcd_gpio/1.jpg" class="maxSize">
+<img src="asm_lcd_gpio/1.jpg" class="maxSize"><br><br>
+
+從觀察結果來看，R和B的資料似乎是故意被交換使用<br>
+<img src="lcd_init/23.jpg" class="maxSize">
 </p>
 
 <p>
