LeetCode Notes for C language used in LeetCode.

--- a/program.htm
+++ b/program.htm
@@ -1407,6 +1407,10 @@ LeetCode</h3>
 <b>C</b><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_note.htm">
+  注意事項</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_1.htm">
   1. Two Sum</a><br>
 
