--- a/mcu.htm
+++ b/mcu.htm
@@ -135,6 +135,7 @@
   <a href="#js9331"><img src="img/photos/js9331.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS 24Kc) AR9331"/></a>
   <a href="#smart_mt7688"><img src="img/photos/smart_mt7688.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS 24KEc) MT7688"/></a>
   <a href="#smart_mt7688-duo"><img src="img/photos/smart_mt7688-duo.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS 24KEc) MT7688"/></a>
+  <a href="#rm08s"><img src="img/photos/rm08s.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS 24KEc) MT7688"/></a>
   <a href="#ubw32"><img src="img/photos/ubw32.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS M4K) PIC32MX795"/></a>
   <a href="#risc-v"><img src="img/photos/risc-v.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="RISC-V"/></a>
   <a href="#gd32vf103"><img src="img/photos/gd32vf103.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISC-V) GD32VF103"/></a>
@@ -2948,6 +2949,16 @@ Build Kernel 5.4.83</a><br>
 &lowast;
 <a href="mcu/mt7688-duo/fix_nod.htm">
 解決"can't open /dev/null /dev/console: No such file or directory"問題</a><br>
+<br><br><br><br>
+
+<div id="rm08s"></div>
+<h3><img src="img/photos/rm08s.jpg" class="floatLeft"/>
+<b>(MIPS 24KEc)</b> MT7688</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="mcu/rm08s/pinout.htm">
+腳位</a><br>
 <br><br><br><br>
 
 <div id="ubw32"></div>
