Massage It is time to build an interesting handheld. codename: Massage It is based on Keyboard FeatherWing and HLK-RM08S module. Target OS is based on Debian and able to update packages via WiFI (HLK-RM08S). The main purpos is for the programmer to program interesting code on this handheld.

--- a/umpc.htm
+++ b/umpc.htm
@@ -1058,6 +1058,14 @@ Keyboard FeatherWing</h3>
 &lowast;
 <a href="umpc/featherwing/sch.htm">
 電路圖</a><br>
+
+&oplus;
+<b>馬沙機 (Massage)</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="umpc/featherwing/massage_hw.htm">
+  硬體製作</a><br>
+  
 <br><br><br><br>
 
 <div id="c100p"></div>
