Massage Fix Q10 keyboard issue.

--- a/umpc/featherwing/massage_hw.htm
+++ b/umpc/featherwing/massage_hw.htm
@@ -68,6 +68,33 @@
 
 背面<br>
 <img src="massage_hw/5.jpg" class="maxSize"><br><br>
+
+鍵盤是這台機器的靈魂元件，司徒對於打字手感特別在意，因此，看了下Q10鍵盤背面，發現凹凸不平，大約有0.1cm的落差<br>
+<img src="massage_hw/6.jpg" class="maxSize"><br><br>
+
+這個落差如下圖：<br>
+<img src="massage_hw/11.jpg" class="maxSize"><br><br>
+
+按下時，鍵盤往下凹，嚴重影響手感<br>
+<img src="massage_hw/12.jpg" class="maxSize"><br><br>
+
+司徒開始修補這個漏洞<br>
+<img src="massage_hw/7.jpg" class="maxSize"><br><br>
+
+凸起的部份<br>
+<img src="massage_hw/8.jpg" class="maxSize"><br><br>
+
+司徒使用堪用的3D印表機打印<br>
+<img src="massage_hw/9.jpg" class="maxSize"><br><br>
+
+粗糙且漂亮的紋理<br>
+<img src="massage_hw/10.jpg" class="maxSize"><br><br>
+
+三秒膠上陣<br>
+<img src="massage_hw/13.jpg" class="maxSize"><br><br>
+
+相當平整<br>
+<img src="massage_hw/14.jpg" class="maxSize">
 </p>
 
 <p>
