Massage It is time to draw the case I want by using OpenSCAD.

--- a/umpc/featherwing/massage_hw.htm
+++ b/umpc/featherwing/massage_hw.htm
@@ -109,6 +109,18 @@
 
 最後一個找到的外殼如下圖所示，相當接近司徒心目中的外殼，比較可惜是並沒有STL檔案可以下載使用<br>
 <img src="massage_hw/18.jpg" class="maxSize"><br><br>
+
+由於找不到適合的外殼使用，司徒只好自己畫一個自己心目中的外殼<br>
+<img src="massage_hw/19.jpg" class="maxSize"><br><br>
+
+看起來好像還不錯～<br>
+<img src="massage_hw/20.jpg" class="maxSize"><br><br>
+
+背面<br>
+<img src="massage_hw/21.jpg" class="maxSize"><br><br>
+
+由於PCB下邊的兩個螺絲孔，沒有夠用的空間上螺絲，司徒使用半圓形擋板方式製作<br>
+<img src="massage_hw/22.jpg" class="maxSize"><br><br>
 </p>
 
 <p>
