--- a/mcu/attiny85/setup.htm
+++ b/mcu/attiny85/setup.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>ATtiny85</h3>
+<h3>ATtiny85 &gt;&gt; C/C++</h3>
 <p><b>開發環境</b></p>
 <hr size="1">
 <p>
