--- a/mcu/rda8810pl/build_pdl.htm
+++ b/mcu/rda8810pl/build_pdl.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Orange Pi 2G-IoT</h3>
+<h3>RDA8810PL</h3>
 <p><b>build uboot(pdl1、pdl2)</b></p>
 <hr size="1">
 <p>
