H3 Updated wrong link and title.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2557,11 +2557,11 @@ Build sunxi-tools</a><br>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
-<a href="mcu/h3-m1/build_all.htm">
+<a href="mcu/h3/build_all.htm">
 Build All</a><br>
 
 &lowast;
-<a href="mcu/h3/flash_image.htm">
+<a href="mcu/h3-m1/flash_image.htm">
 Flash Image(SDCard)</a><br>
 <br><br><br><br>
 
