--- a/mcu/osd3358/build_uboot-201507.htm
+++ b/mcu/osd3358/build_uboot-201507.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>PocketBeagle</h3>
+<h3>OSD3358</h3>
 <p><b>build uboot 201507</b></p>
 <hr size="1">
 <p>
