BCM2837 Updated wrong title.

--- a/mcu/bcm2837/n900_build_kernel.htm
+++ b/mcu/bcm2837/n900_build_kernel.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Raspberry Pi3</h3>
+<h3>BCM2837</h3>
 <p><b>Build Kernel(N900)</b></p>
 <hr size="1">
 <p>Tooolchain</p>
